# ts-agentic-ops-server

./: README.md  package-lock.json  package.json  rust_core.node  tsconfig.json
data/nnac/: ac-installation_keywords.json  ac_installation_vs_heat_pump_serp_results.json
docs/: setup.md
rust_core/: Cargo.toml
rust_core/src/: lib.rs  transcribe_audio.rs
src/: main.ts  native.d.ts  server.ts  supervisor.ts  test.ts  testAutocomplete.ts  testInternalLinks.ts  testKeywordMiner.ts  testKeywordPipeline.ts  testPlaywright.ts  testSeoAgent.ts
src/controllers/agentControllers/: agent.controller.ts
src/routes/agentRoutes/: agent.routes.ts
src/services/: logger.ts
src/templates/frontend/: audioInterface.html
src/toolkits/: fileSystem.ts  rustBridge.ts  seoTools.ts  writingTools.ts
tools/: tools.txt
